make fluid recipe capability support intersection fluid ingredients